# LiveLink

./: .gitignore  .npmrc  DOCS.md  README.md  SET_TITLE_VIA_IPC.md  TESTING.md  config  diff  diff.ts  electron-builder.json  jest.config.js  jest.setup.js  log.liog  main.js  package-lock.json  package.json  repomix-output.xml  server.ts  setup.sh  stopall.sh  stopstream.sh  svelte.config.js  test_fixes.ts  test_race_condition_fixes.ts  test_stream_manager_fixes.ts  test_title_setting.ts  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.electron.json  tsconfig.json  tsconfig.server.json  tsconfig.test.json  vite.config.ts
.prompts/: fixrace.md  fixracesmall.md
__mocks__/: jest-mock-extended.js
config/: filters.json
coverage/: clover.xml  index.html  lcov.info
electron/: index.html  main.ts  preload.ts
electron-dist/: main.js  main.js.map  preload.js  preload.js.map
generated-wm-configs/: README.md
livelink-t/: package-lock.json  package.json
project.inlang/: project_id  settings.json
rust/: Cargo.toml
rust/src/: core.rs  core_test.rs  main.rs  services.rs
rust/src/api/: routes.rs
rust/src/cli/: commands.rs
rust/src/config/: env.rs  favorites.rs  mod.rs
rust/src/core/: events.rs  orchestrator.rs  state.rs
rust/src/core/orchestrator/: clone_impl.rs  fetch_ops.rs  lock_ops.rs  mod.rs  player_ops.rs  query_ops.rs  queue_ops.rs  recovery_ops.rs  state_ops.rs  stream_ops.rs
rust/src/queue/: queue.rs
rust/src/services/: bilibili.rs  facebook.rs  fallback.rs  holodex.rs  kick.rs  mpv.rs  network.rs  niconico.rs  player.rs  twitch.rs  youtube.rs
rust/src/ui/: app.rs  mod.rs
scripts/: generate-wm-config.js  livelink.lua  livelink.service  position_windows.sh  streamlink-wrapper  test-network-optimization.js
src/: app.css  hooks.client.ts  hooks.server.ts  hooks.ts  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
(+178 files in other folders)
