[package]
name = "livelink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
holodex = "0.3"
twitch_api = { version = "0.7", features = ["helix", "client"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
youtube-api = "0.1"
dotenv = "0.15"
mpv = "0.2"
kick-rust = "0.1"
futures-util = "0.3"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"